// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";
package org.example.service;

import "kalix/annotations.proto";
import "external_domain.proto";

option java_outer_classname = "ServiceOuterClass";

service MyService {
  option (kalix.service) = {
    type : SERVICE_TYPE_ACTION
  };

  rpc simpleMethod(MyRequest) returns (org.external.Empty) {}
  rpc streamedOutputMethod(MyRequest) returns (stream org.external.Empty) {}
  rpc streamedInputMethod(stream MyRequest) returns (org.external.Empty) {}
  rpc fullStreamedMethod(stream MyRequest) returns (stream org.external.Empty) {}
}

message MyRequest {}